# housing

./: .gitignore  README.md  pyproject.toml
bash/: build_scraping.sh  deploy_scraping.sh  ecr_deploy.sh  run_scraping.sh  setup_aws.sh
infra/: README.md  infra.drawio  secret.yml.example
infra/etl/: ecr.tf  ecs.tf  iam.tf  main.tf  s3.tf  sg.tf  terraform.tf  variables.tf
infra/etl/backend/: backend-dev.hcl  backend-prod.hcl
infra/etl/ecs_task_module/: main.tf  variables.tf
infra/etl/envs/: backend-dev.hcl  backend-prod.hcl  example.tfvars
notebooks/: eda.ipynb  plots.ipynb
web_scraping/: .dockerignore  Dockerfile  crawl_meta.json  run_auto.sh  settings.py
web_scraping/spiders/: aruodas.py
