[project]
name = "housing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "scrapy>=2.13.3",
]

[ruff]
line-length = 80
