[project]
name = "housing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dataanalysis = [
    "boto3>=1.41.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.5",
]
scraping = [
    "boto3>=1.41.2",
    "scrapy>=2.13.4",
]

[ruff]
line-length = 80

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
